examples/compiler_errors/inv_ins.gs
nop	Invalid instruction.

npo	Valid instruction.
